show line numbres

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<link rel="stylesheet" href="node_modules/codemirror/lib/codemirror.css">
 <title>My example app</title>
 <div id="codemirror"></div>
 <div id="app"></div>
