--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <link rel="stylesheet" href="node_modules/codemirror/lib/codemirror.css">
-<title>My example app</title>
-<div id="codemirror"></div>
-<div id="app"></div>
+<title>p5.js-widget</title>
+<div id="app-holder"></div>
 <script src="bundle.js"></script>
