--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <link rel="stylesheet" href="node_modules/codemirror/lib/codemirror.css">
+<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 <title>p5.js-widget</title>
 <div id="app-holder"></div>
 <script src="bundle.js"></script>
