add p5-widget.js, html.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<link rel="stylesheet" href="node_modules/codemirror/lib/codemirror.css">
-<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 <title>p5.js-widget</title>
-<div id="app-holder"></div>
-<script src="bundle.js"></script>
+<h1>p5.js-widget</h1>
+<p>
+  This is an experimental widget to make it easier to embed editable
+  p5 sketches in blog post, interactive curricula, and other places.
+</p>
+<h2>Examples</h2>
+<script type="text/p5"></script>
+<script src="p5-widget.js"></script>
