--- a/index.html
+++ b/index.html
@@ -1,11 +1,82 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<link rel="stylesheet" href="static/vendor/prism.css">
+<link rel="stylesheet" href="static/index.css">
 <title>p5.js-widget</title>
 <h1>p5.js-widget</h1>
 <p>
   This is an experimental widget to make it easier to embed editable
-  p5 sketches in blog post, interactive curricula, and other places.
+  p5 sketches in blog posts, interactive curricula, and other places.
 </p>
-<h2>Examples</h2>
-<script type="text/p5"></script>
-<script src="p5-widget.js"></script>
+<h2>Quick Start</h2>
+
+<p>
+  To use this widget, add the following script to your page:
+</p>
+
+<pre><code class="language-markup" id="script-tag-example"></code></pre>
+
+<p>
+  The script will then automatically transform all script tags of
+  type <code>text/p5</code> on the page into editable widgets, like so:
+</p>
+
+<script type="text/p5">
+function setup() {
+  createCanvas(100, 100);
+}
+
+function draw() {
+  background(255, 0, 200);
+}
+</script>
+
+<h2>Autoplay</h2>
+
+<p>
+  Note that by default, the sketch will <em>not</em> start playing
+  automatically. This can be changed via the <code>data-autoplay</code>
+  property like so:
+</p>
+
+<script type="text/p5" data-autoplay="">
+function setup() {
+  createCanvas(100, 100);
+  background(255, 0, 200);
+  noLoop(); // Don't slow down the whole page and drain battery.
+}
+</script>
+
+<h2>Error Handling</h2>
+
+<p>
+  The widget is intended to be resilient against various types of
+  user error. In the future, we'd like to improve the widget to
+  provide more
+  <a href="http://processing.toolness.org">friendly errors</a>.
+</p>
+
+<script type="text/p5" data-autoplay="" data-hide-sourcecode="">
+function setup() {
+  // Reference a non-existent variable...
+  KABOOM
+}
+</script>
+
+<script type="text/p5" data-autoplay="" data-hide-sourcecode="">
+// Syntax error (no parentheses after function name)
+function setup {
+}
+</script>
+
+<script type="text/p5" data-hide-sourcecode="">
+function setup() {
+  // Infinite loop!
+  while (true) {}
+}
+</script>
+
+<script src="static/vendor/jquery.js"></script>
+<script src="p5-widget.js" data-manual=""></script>
+<script src="static/vendor/prism.js" data-manual=""></script>
+<script src="static/index.js"></script>
