move lib/preview-frame.js into static/.

--- a/preview-frame.html
+++ b/preview-frame.html
@@ -18,5 +18,5 @@ body {
 </style>
 <title>Preview</title>
 <body>
-  <script src="lib/preview-frame.js"></script>
+  <script src="static/preview-frame.js"></script>
 </body>
