--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ function draw() {
 <p>
   Note that by default, the sketch will <em>not</em> start playing
   automatically. This can be changed via the <code>data-autoplay</code>
-  property like so:
+  attribute like so:
 </p>
 
 <script type="text/p5" data-autoplay="">
