shorter comments for smaller screens

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@ function draw() {
 function setup() {
   createCanvas(100, 100);
   background(255, 0, 200);
-  noLoop(); // Don't slow down the whole page and drain battery.
+
+  // Don't slow down the whole page.
+  noLoop();
 }
 </script>
 
