Add meta viewport tag

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<meta name="viewport" content="width=768, initial-scale=1">
 <link rel="stylesheet" href="static/vendor/prism.css">
 <link rel="stylesheet" href="static/index.css">
 <title>p5.js-widget</title>
