--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ function draw() {
   attribute like so:
 </p>
 
-<script type="text/p5" data-autoplay="">
+<script type="text/p5" data-autoplay>
 function setup() {
   createCanvas(100, 100);
   background(255, 0, 200);
@@ -62,20 +62,20 @@ function setup() {
   <a href="http://processing.toolness.org">friendly errors</a>.
 </p>
 
-<script type="text/p5" data-autoplay="" data-hide-sourcecode="">
+<script type="text/p5" data-autoplay data-hide-sourcecode>
 function setup() {
   // Reference a non-existent variable...
   KABOOM
 }
 </script>
 
-<script type="text/p5" data-autoplay="" data-hide-sourcecode="">
+<script type="text/p5" data-autoplay data-hide-sourcecode>
 // Syntax error (no parentheses after function name)
 function setup {
 }
 </script>
 
-<script type="text/p5" data-hide-sourcecode="">
+<script type="text/p5" data-hide-sourcecode>
 function setup() {
   // Infinite loop!
   while (true) {}
@@ -83,6 +83,6 @@ function setup() {
 </script>
 
 <script src="static/vendor/jquery.js"></script>
-<script src="p5-widget.js" data-manual=""></script>
-<script src="static/vendor/prism.js" data-manual=""></script>
+<script src="p5-widget.js" data-manual></script>
+<script src="static/vendor/prism.js" data-manual></script>
 <script src="static/index.js"></script>
