--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <meta name="viewport" content="width=768, initial-scale=1">
 <link rel="stylesheet" href="static/vendor/prism.css">
 <link rel="stylesheet" href="static/index.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.min.css" />
 <title>p5.js-widget</title>
 
-<a href="https://github.com/toolness/p5.js-widget"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+<a class="github-fork-ribbon" href="https://github.com/toolness/p5.js-widget" title="Fork me on GitHub">Fork me on GitHub</a>
 
 <h1>p5.js-widget</h1>
 <p>
