switch from Karla to Montserrat as per #14.

--- a/p5-widget.html
+++ b/p5-widget.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <link rel="stylesheet" href="static/vendor/codemirror.css">
-<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <title>p5.js-widget</title>
 <div id="app-holder"></div>
 <script src="bundle.js"></script>
