link to p5 website in index.html.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <h1>p5.js-widget</h1>
 <p>
-  This is an experimental widget to make it easier to embed editable
-  p5 sketches in blog posts, interactive curricula, and other places.
+  This is a reusable widget that makes it easier to embed editable
+  <a href="http://p5js.org">p5.js</a> sketches in blog posts,
+  interactive curricula, and other places.
 </p>
 <h2>Quick Start</h2>
 
