Add initial test suite. Fixes #9.

--- a/p5-widget.html
+++ b/p5-widget.html
@@ -4,4 +4,4 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <title>p5.js-widget</title>
 <div id="app-holder"></div>
-<script src="bundle.js"></script>
+<script src="main.bundle.js"></script>
