Initial conversion of preview-frame.js to .ts.

--- a/preview-frame.html
+++ b/preview-frame.html
@@ -22,5 +22,5 @@ body {
 </style>
 <title>Preview</title>
 <body>
-  <script src="static/preview-frame.js"></script>
+  <script src="preview-frame.bundle.js"></script>
 </body>
