Add a ToC. fixes #16.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
   <a href="http://p5js.org">p5.js</a> sketches in blog posts,
   interactive curricula, and other places.
 </p>
-<h2>Quick Start</h2>
+
+<h2>Table of Contents</h2>
+
+<ol>
+  <li><a href="#quick-start">Quick Start</a>
+  <li><a href="#autoplay">Autoplay</a>
+  <li><a href="#error-handling">Error Handling</a>
+  <li><a href="#resizing">Resizing</a>
+</ol>
+
+<h2 id="quick-start">Quick Start</h2>
 
 <p>
   To use this widget, add the following script to your page:
@@ -37,7 +47,7 @@ function draw() {
 }
 </script>
 
-<h2>Autoplay</h2>
+<h2 id="autoplay">Autoplay</h2>
 
 <p>
   Note that by default, the sketch will <em>not</em> start playing
@@ -55,7 +65,7 @@ function setup() {
 }
 </script>
 
-<h2>Error Handling</h2>
+<h2 id="error-handling">Error Handling</h2>
 
 <p>
   The widget is intended to be resilient against various types of
@@ -101,7 +111,7 @@ function setup() {
 }
 </script>
 
-<h2>Resizing</h2>
+<h2 id="resizing">Resizing</h2>
 
 <p>
   The height of the widget (and consequently the sketch preview pane too)
