switch to newer tests

--- a/test/index.html
+++ b/test/index.html
@@ -4,4 +4,4 @@
 <title>Tests</title>
 <div id="mocha"></div>
 <script src="../node_modules/mocha/mocha.js"></script>
-<script src="../tests.bundle.js"></script>
+<script src="../dist/tests.bundle.js"></script>
