begin consuming monaco

--- a/static/index.html
+++ b/static/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=768, initial-scale=1">
-<link rel="stylesheet" href="static/vendor/prism.css">
-<link rel="stylesheet" href="static/index.css">
+<link rel="stylesheet" href="./vendor/prism.css">
+<link rel="stylesheet" href="./index.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.min.css" />
 <title>p5.js-widget</title>
 
@@ -242,10 +242,10 @@ function setup() {
   The <code>src</code> attribute can be used to load the widget's
   content from an external file instead of specifying it inline. For
   example, the following will load the widget's content from
-  <code><a href="static/my-example.js">static/my-example.js</a></code>:
+  <code><a href="./my-example.js">./my-example.js</a></code>:
 </p>
 
-<script type="text/p5" src="static/my-example.js"></script>
+<script type="text/p5" src="./my-example.js"></script>
 
 <p>
   If the URL is relative, then it will be retrieved relative to the URL
@@ -277,7 +277,7 @@ function draw() {
 &lt;/pre&gt;
 </code></pre>
 
-<script src="static/vendor/jquery.js"></script>
+<script src="./vendor/jquery.js"></script>
 <script src="p5-widget.js" data-manual></script>
-<script src="static/vendor/prism.js" data-manual></script>
-<script src="static/index.js"></script>
+<script src="./vendor/prism.js" data-manual></script>
+<script src="./index.js"></script>
