start highlighting string

--- a/static/index.html
+++ b/static/index.html
@@ -191,6 +191,21 @@ function setup() {
 }
 </script>
 
+<h2 id="syntax-playground">Syntax playground</h2>
+
+<p>
+  Here is a playground for syntax highlighting:
+</p>
+
+<script type="text/p5" data-hide-sourcecode>
+function setup() {
+}
+
+function draw() {
+  let string = "a string";
+}
+</script>
+
 <h2 id="specifying-p5-version">Specifying The p5 Version</h2>
 
 <p>
