--- a/static/index.html
+++ b/static/index.html
@@ -24,6 +24,7 @@
   <li><a href="#implicit-setup">Implicit <code>setup()</code></a>
   <li><a href="#error-handling">Error Handling</a>
   <li><a href="#resizing">Resizing</a>
+  <li><a href="#syntax-playground">Syntax playground</a>
   <li><a href="#specifying-p5-version">Specifying The p5 Version</a>
   <li><a href="#base-url">Specifying The Base URL</a>
   <li><a href="#src">Loading From An External File</a>
@@ -201,8 +202,15 @@ function setup() {
 function setup() {
 }
 
+function add(a, b) {
+  return a + b;
+}
+
 function draw() {
+  // A comment
   let string = "a string";
+  let sum = 4 + 31;
+  console.log(sum);
 }
 </script>
 
