add non-working full-screen

--- a/static/index.html
+++ b/static/index.html
@@ -54,6 +54,8 @@ function draw() {
 }
 </script>
 
+<a href="./full-screen.html" class="button">Try it full-screen &rarr;</a>
+
 <h2 id="autoplay">Autoplay</h2>
 
 <p>
