--- a/static/full-screen.html
+++ b/static/full-screen.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=768, initial-scale=1">
-<link rel="stylesheet" href="./vendor/prism.css">
 <link rel="stylesheet" href="./index.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.min.css" />
-<title>p5.js-widget</title>
+<title>p5.js-widget full-screen</title>
 
+<body class="full-screen">
+    <a href="./index.html" class="hatnote">&larr; Back to main page</a>
 
-<a class="github-fork-ribbon" href="https://github.com/toolness/p5.js-widget" title="Fork me on GitHub">Fork me on GitHub</a>
+    <!-- TODO: preview width percentage -->
+    <script type="text/p5" data-autoplay="true" data-height="100%" data-preview-width="600px">
+function setup() {
+    createCanvas(100, 100);
+    background(255, 0, 200);
+}
+    </script>
+</body>
 
-<h1>Full Screen editor</h1>
-
-<a href="./index.html">&larr; Back to main page</a>
-
-<script type="text/p5" data-autoplay>
-    function setup() {
-      createCanvas(100, 100);
-      background(255, 0, 200);
-    }
-</script>
-
-<script src="./vendor/jquery.js"></script>
-<script src="p5-widget.js" data-manual></script>
-<script src="./vendor/prism.js" data-manual></script>
-<script src="./index.js"></script>
+<script src="p5-widget.js"></script>
