you can also specify a percentage

--- a/static/index.html
+++ b/static/index.html
@@ -177,6 +177,10 @@ function setup() {
 <script type="text/p5" data-height="600"></script>
 
 <p>
+  You can also specify a percentage, like <code>100%</code> or <code>80%</code>.
+</p>
+
+<p>
   The width of the widget is always set to the full width of its
   container element.
 </p>
